--- a/log4j.properties
+++ b/log4j.properties
@@ -1,7 +1,5 @@
-log4j.rootLogger = INFO, FILE,stdout,HTML
+log4j.rootLogger = INFO,stdout
 
-# Define the file appender
-log4j.appender.FILE=org.apache.log4j.FileAppender
 log4j.appender.FILE.File=selenium.out
 log4j.appender.FILE.Append=false
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
@@ -9,16 +7,6 @@ log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:
 log4j.appender.file.MaxFileSize=4MB
 log4j.appender.file.MaxBackupIndex=9
 
-
-log4j.appender.HTML=org.apache.log4j.FileAppender
-log4j.appender.HTML.File=application.html
-log4j.appender.HTML.layout=org.apache.log4j.HTMLLayout
-log4j.appender.HTML.layout.Title=Application log
-log4j.appender.HTML.layout.LocationInfo=true
-log4j.appender.HTML.Append=false
-
-
-# Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
