--- a/log4j.properties
+++ b/log4j.properties
@@ -1,5 +1,6 @@
 log4j.rootLogger = INFO,stdout
 
+# Define the file appender
 log4j.appender.FILE.File=selenium.out
 log4j.appender.FILE.Append=false
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
