--- a/log4j.properties
+++ b/log4j.properties
@@ -2,7 +2,7 @@ log4j.rootLogger = INFO, FILE,stdout,HTML
 
 # Define the file appender
 log4j.appender.FILE=org.apache.log4j.FileAppender
-log4j.appender.FILE.File=selenium.out
+log4j.appender.FILE.File=log.out
 log4j.appender.FILE.Append=false
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
@@ -21,4 +21,4 @@ log4j.appender.HTML.Append=false
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%m%n
